feat: adds session management and drafts

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 if sending as user. ask if to send generic message or as the user in user's tone.
 Save the states for drafts.
+
+use bank icon for bank transfer icon.
