--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-if sending as user. ask if to send generic message or as the user in user's tone.
-Save the states for drafts.
+if sending as user. ask if to send generic message or as the user in user's tone. Null
+Save the states for drafts. Done
 
 use bank icon for bank transfer icon.
+
+fix square highlight issue
