--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 if sending as user. ask if to send generic message or as the user in user's tone. Null
 Save the states for drafts. Done
 
-use bank icon for bank transfer icon.
+use bank icon for bank transfer icon. Done
 
-fix square highlight issue
+fix square highlight issue. Done
